swagger routes integreted
